syntax = "proto3";


//pb是protoc 生成go文件的包名
option go_package ="./;pb";

message UserModel{
    uint32 id=1;
    string user_name=2;
    int64 created_at=3;
    int64 updated_at=4;
    int64 deleted_at=5;
}

message UserRequest{
    string user_name=1;
    string password=2;
    string password_confirm=3;

}
message UserResponse {
    UserModel user_detail=1;
    uint32 code=2;
}

service UserService{
    rpc UserLogin(UserRequest) returns(UserResponse);
    rpc UserRegister(UserRequest) returns(UserResponse);
}